--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ pytest-cov = "^4.0.0"
 flake8 = "^5.0.4"
 
 [tool.poetry.scripts]
-gendiff = "gendiff.scripts.gendiff_script:main"
+gendiff = "gendiff.scripts.gendiff:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
