--- a/setup.cfg
+++ b/setup.cfg
@@ -5,21 +5,26 @@ branch = True
 accept-encodings = utf-8
 max-complexity = 6
 statistics = False
-max-line-length = 90
+max-line-length = 80
 doctests = True
 enable-extensions = G
 isort-show-traceback = True
+
+exclude = .venv,dist,build
 
 # clean default ignore list
 ignore = E712, E711, C901, E501, F401
 
 per-file-ignores =
-  # it is possibble to have prints in scripts
-  hexlet_python_package/scripts/*.py: WPS421
+  # init modules can contain the local imports, logic, unused imports
+  __init__.py: F401
 
 [tool:pytest]
 norecursedirs = __pycache__
 addopts = --strict-markers
+asyncio_mode=auto
+;asyncio_mode=strict
+;asyncio_mode=legacy
 
 [isort]
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
