--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
         # make depends on poetry
+      - name: Install Pytest
+        run: |
+          pip install -U pytest
       - name: Install dependencies
         run: |
           pip install poetry
