--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
         # make depends on poetry
+      - name: Install Pytest
       - name: Install dependencies
         run: |
           pip install poetry
