--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Code Coverage
         uses: paambaati/codeclimate-action@v3.0.0
         env:
-          CC_TEST_REPORTER_ID: ${{ e0101b8d26149b9411fdd8e372ba12bd89cb8b061f150d32dddb113a12fd3495 }}
+          CC_TEST_REPORTER_ID: e0101b8d26149b9411fdd8e372ba12bd89cb8b061f150d32dddb113a12fd3495 
         with:
           coverageCommand: make test-coverage
           debug: true
