--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,9 @@ jobs:
           chmod +x ./cc-test-reporter 
           ./cc-test-reporter before-build
       - name: run test cov
-        run: make test-cov
+        run: make test-coverage
       - name: Sending Repo
         env:
-          GITHAB_TOKEN: ${{ secrets.TEST_REPORTER_ID }}
+          GITHAB_TOKEN: ${{ secrets.CC_TEST_REPORTER_ID }}
         run:  |
          ./cc-test-reporter after-build -r $GITHAB_TOKEN
